[package]
name = "continu"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15"
base64 = "0.22.1"
dirs = "5.0.1"
nix = "0.23.0"