[package]
name = "continu"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15"
base64 = "0.22.1"
dirs = "5.0.1"
nix = { version = "0.29.0", features = ["user"] }
inquire="0.7.5"
colored = "2.0"
config = "0.14.0" 
openssl = "0.10"
notify = "6.1.1"
log = "0.4.22"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
sys-info = "0.9.1"